- fixed searchbox module spanning across large screens - changed loadmore button - removed icons from sidebar in feed - updated product hub to be more similar to feed - added a few z-index and size settings - modified padding on pulse

--- a/assets/sass/cmu/cmuButtons/modules/_cmuButtonsModule.scss
+++ b/assets/sass/cmu/cmuButtons/modules/_cmuButtonsModule.scss
@@ -409,7 +409,9 @@ button, .button {
 .button--stretch {
 	width: 100%;
  }
-
+.button--center {
+	text-align: center;
+ }
 .button--tall {
 	padding-top: $cmu-base/2;
 	padding-bottom: $cmu-base/2;
